fixed alignment of create idea button

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -171,7 +171,13 @@ text-align: center;
 }
 
 .createIdeaBtn {
-  width: 50px;
+  width: 250px;
+  height: 40px;
+  padding: -1px 0;
+  background-color: $primary-color;
+  border: none;
+  color: white;
+  font-size: 16px;
 }
 
 .ideas {
